# stream-sniper

./: .dockerignore  .env.example  .env.prod.template  .gitignore  CLAUDE.md  DEPLOYMENT.md  DOCKER.md  Dockerfile.api  Dockerfile.collector  FUTURE_IMPROVEMENTS.md  HEALTH_MONITORING.md  LICENSE  MODERNIZATION_PLAN.md  PERFORMANCE_FEATURES.md  README.md  TRACKING_SYSTEM.md  TRIGGER_DEPLOY.md  api_documentation_preview.md  docker-compose.prod.yml  docker-compose.yml  main.py  manual_health_test.py  pyproject.toml  requirements.txt  test_health_endpoints.py  test_health_simple.py
backend/: .dockerignore  CLAUDE.md  Dockerfile.api  Dockerfile.collector  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/stream_sniper/: __init__.py  cli.py  identity.py  live_auth_cli.py  live_service.py  logging_config.py  tracking_service.py
backend/stream_sniper/analytics/: __init__.py  backfill.py  bot_detection.py  community.py  digest.py  emote_seed.py  moment_enrichment.py  moments.py  report_stats.py  rollup_engine.py  scene_events.py  text_stats.py
backend/stream_sniper/analytics/calculations/: __init__.py  moments.py  report_stats.py  text_stats.py
backend/stream_sniper/analytics/operations/: __init__.py  backfill.py  bot_detection.py  digest.py
backend/stream_sniper/analytics/rollups/: __init__.py  community.py  emote_seed.py  moment_enrichment.py  rollup_engine.py  scene_events.py
backend/stream_sniper/api/: __init__.py  analytics_endpoints.py  analytics_models.py  api.py  asgi.py  audience_endpoints.py  audience_models.py  auth.py  auth_endpoints.py  cache.py  chatter_endpoints.py  community_endpoints.py  community_models.py  compare_endpoints.py  compare_models.py  composition.py  config.py  creator_endpoints.py  dependencies.py  error_boundary.py  export_utils.py  health.py  message_endpoints.py  message_models.py  middleware.py  models.py  moment_endpoints.py  moment_models.py  moments.py  monitoring.py  operations_endpoints.py  protected_routes.py  rate_limiter.py  runtime.py  scene_endpoints.py  scene_event_endpoints.py  scene_event_models.py  scene_models.py  server.py  stream_endpoints.py  (+14 more)
backend/stream_sniper/api/caching/: __init__.py  cache.py  cache_warmup.py  model_cache.py  rollup_version.py
backend/stream_sniper/api/features/: __init__.py
backend/stream_sniper/api/observability/: __init__.py  health.py  health_contracts.py  health_renderers.py  monitoring.py
backend/stream_sniper/api/security/: __init__.py  auth.py  auth_models.py  rate_limiter.py
backend/stream_sniper/api/transport/: __init__.py  export_utils.py  models.py
backend/stream_sniper/application/: __init__.py
backend/stream_sniper/application/chatters/: __init__.py  archetypes.py  chatter_aggregates.py  passport_models.py  passport_query.py  versus_models.py  versus_query.py
backend/stream_sniper/application/community/: __init__.py  audience_models.py  audience_query.py  community_query.py  head_to_head_query.py  models.py
backend/stream_sniper/application/creators/: __init__.py  analytics_models.py  analytics_query.py  regulars_models.py  regulars_query.py  wrapped_models.py  wrapped_query.py
backend/stream_sniper/application/identity/: __init__.py  tracked_streamer_creation.py  user_creation.py
backend/stream_sniper/application/scenes/: __init__.py  emote_detail_models.py  emote_detail_query.py  models.py  scene_query.py  wrapped_models.py  wrapped_query.py
backend/stream_sniper/application/streams/: __init__.py  catalog_models.py  catalog_query.py  compare_models.py  compare_query.py  export_query.py  message_models.py  message_page_query.py  report_models.py  report_query.py  timeline_models.py  timeline_query.py
backend/stream_sniper/application/tracking/: __init__.py  job_admin.py  manual_processing.py  models.py
backend/stream_sniper/collector/: __init__.py  badge_format.py  chat_processor.py  database_buffer.py  irc_chat_downloader.py  message_handler.py  twitch_api.py  twitch_collector_facade.py  twitch_gql_patch.py
backend/stream_sniper/collector/archived/: __init__.py  chat_parser.py  (+8 more)
backend/stream_sniper/database/: __init__.py  audience_movement_table_gateway.py  chatter_table_gateway.py  connection_pool.py  create_table.sql  creator_chatter_stats_table_gateway.py  creator_overlap_table_gateway.py  creator_table_gateway.py  decorators.py  emote_dictionary_table_gateway.py  live_chat_table_gateway.py  message_replay_gateway.py  message_table_gateway.py  message_text_table_gateway.py  migrate.py  moment_review_table_gateway.py  processing_jobs_table_gateway.py  remove_all.sql  scene_event_table_gateway.py  scene_table_gateway.py  stream_chatter_stats_table_gateway.py  stream_compare_table_gateway.py  stream_context_table_gateway.py  stream_copypasta_stats_table_gateway.py  stream_emote_stats_table_gateway.py  stream_metrics_table_gateway.py  stream_moment_table_gateway.py  stream_phrase_stats_table_gateway.py  stream_table_gateway.py  stream_time_bucket_table_gateway.py  stream_viewer_sample_table_gateway.py  tracked_streamers_table_gateway.py  tracking_heartbeat_table_gateway.py  user_table_gateway.py
backend/stream_sniper/tracking/: __init__.py  heartbeat.py  processing_queue.py  scheduler.py  service.py  status.py  stream_monitor.py  stream_processor.py
backend/stream_sniper/utils/: __init__.py  discord.py  message_grabbing_utils.py  utils.py
backend/tests/: README.md  __init__.py  conftest.py
backend/tests/fixtures/: __init__.py  sample_data.py
backend/tests/integration/: __init__.py  test_analytics_expansion_gateways.py  test_api_workflows.py  test_creator_table_gateway.py  test_database_operations.py  test_moment_endpoints.py  test_rollup_engine.py  test_scene_copypasta_gateway.py  test_stream_table_gateway.py  test_stream_viewer_sample_gateway.py  test_tracking_system.py  test_vod_retry.py
backend/tests/unit/: __init__.py  test_chat_metadata.py  test_cli.py  test_download_bettertv_emotes.py  test_live_auth_cli.py  test_live_service.py  test_logging_config.py  test_package_contracts.py  test_secure_files.py  test_tracking_service.py
(+1157 files in other folders)
