[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stream-sniper"
version = "2.0.0"
description = "A comprehensive Twitch stream analytics platform that collects, processes, and analyzes chat data from streams with REST API and Docker support"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "slanycukr"},  # Email removed for privacy
]
keywords = ["twitch", "analytics", "chat", "streaming", "data-collection", "fastapi", "postgresql", "docker"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
    "Topic :: Database :: Front-Ends",
    "Topic :: Multimedia :: Video :: Display",
]

dependencies = [
    "psycopg2-binary~=2.9.10",
    "twitchAPI~=4.5.0",
    "tqdm~=4.67.1",
    "pytimeparse~=1.1.8",
    "python-dotenv~=1.1.1",
    "fastapi>=0.115.0",
    "starlette>=0.40.0",
    "uvicorn~=0.35.0",
    "chat-downloader~=0.2.8",
    "requests>=2.32.0",
    "urllib3>=2.2.0",
    # Performance and caching dependencies
    "redis>=5.0.0",
    "slowapi>=0.1.9",
    # Authentication dependencies
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
    # Monitoring and utilities
    "prometheus-client>=0.20.0",
    "psutil>=6.0.0",
    "alembic>=1.18.5",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "httpx>=0.25.0",  # For API testing
    "ruff>=0.9",
    "mypy>=1.0",
]

[project.scripts]
stream-sniper = "stream_sniper.cli:main"
stream-sniper-api = "stream_sniper.api.server:run"
stream-sniper-tracking = "stream_sniper.tracking_service:run_tracking_service"
stream-sniper-migrate = "stream_sniper.database.migrate:main"

[project.urls]
Homepage = "https://github.com/slanycukr/stream-sniper"
Documentation = "https://github.com/slanycukr/stream-sniper#readme"
Repository = "https://github.com/slanycukr/stream-sniper.git"
Issues = "https://github.com/slanycukr/stream-sniper/issues"

[tool.hatch.build.targets.wheel]
packages = ["stream_sniper"]

[tool.hatch.build.targets.sdist]
include = [
    "/stream_sniper",
    "/README.md",
    "/CLAUDE.md",
    "/uv.lock",
    "/docker-compose.yml",
    "/Dockerfile.api",
    "/Dockerfile.collector",
    "/.dockerignore",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = [
    "E501",   # line-length handled by formatter
    # Pervasive pre-existing style on a working codebase; not modernization-scope.
    # Annotation-style modernization would churn nearly every file.
    "UP006",  # non-pep585-annotation (List -> list)
    "UP007",  # non-pep604-annotation-union (Union -> |)
    "UP035",  # deprecated typing import
    "UP045",  # non-pep604-annotation-optional (Optional[X] -> X | None)
    "B008",   # function-call-in-default-argument (FastAPI Depends/Query/Path pattern)
    "B904",   # raise-without-from-inside-except (pre-existing style across API error handlers)
]

[tool.ruff.lint.per-file-ignores]
# Deliberate star-import barrel that re-exports the table-gateway API.
"stream_sniper/database/__init__.py" = ["F403", "F405"]
# Test-authoring patterns that are intentional in the test suite:
#   B017/pytest.raises(Exception) broad-exception assertions,
#   E712 explicit == True/False against DB-returned values,
#   B007 unused loop index, B905 zip() without strict=,
#   SIM117 nested with (patch + pytest.raises) kept for readability,
#   F841 unused intermediate fixtures/vars in test setup.
"tests/**" = ["B017", "E712", "B007", "B905", "SIM117", "F841"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=stream_sniper --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["stream_sniper"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
