[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stream-sniper"
version = "2.0.0"
description = "A comprehensive Twitch stream analytics platform that collects, processes, and analyzes chat data from streams with REST API and Docker support"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "slanycukr"},  # Email removed for privacy
]
keywords = ["twitch", "analytics", "chat", "streaming", "data-collection", "fastapi", "postgresql", "docker"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
    "Topic :: Database :: Front-Ends",
    "Topic :: Multimedia :: Video :: Display",
]

dependencies = [
    "psycopg2-binary~=2.9.10",
    "twitchAPI~=4.5.0",
    "tqdm~=4.67.1",
    "pytimeparse~=1.1.8",
    "python-dotenv~=1.1.1",
    "fastapi>=0.115.0,<1",
    "pydantic>=2.13,<3",
    "starlette>=0.40.0,<2",
    "uvicorn~=0.51.0",
    "requests>=2.32.0,<3",
    "urllib3>=2.2.0,<3",
    "aiohttp>=3.12,<4",
    # Rate limiting (in-process memory storage)
    "slowapi>=0.1.9,<1",
    # Authentication dependencies
    "PyJWT>=2.8.0,<3",
    "bcrypt>=4.0.0,<6",
    "email-validator>=2.0.0,<3",
    # Monitoring and utilities
    "psutil>=6.0.0,<8",
    "alembic>=1.18.5,<2",
    "sqlalchemy>=2.0,<3",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "httpx>=0.25.0",  # For API testing
    "ruff>=0.15.22",
    "mypy>=1.0",
    "types-psycopg2>=2.9.21.20260712",
]

[project.scripts]
stream-sniper = "stream_sniper.cli:main"
stream-sniper-api = "stream_sniper.api.server:run"
stream-sniper-tracking = "stream_sniper.tracking.service:run_tracking_service"
stream-sniper-migrate = "stream_sniper.database.commands.migrate:main"
stream-sniper-rollup = "stream_sniper.analytics.operations.backfill:main"
stream-sniper-classify-bots = "stream_sniper.analytics.operations.bot_detection:main"
stream-sniper-digest = "stream_sniper.analytics.operations.digest:main"
stream-sniper-live = "stream_sniper.collector.live.service:run_live_service"
stream-sniper-live-auth = "stream_sniper.collector.live.auth_cli:main"

[project.urls]
Homepage = "https://github.com/slanycukr/stream-sniper"
Documentation = "https://github.com/slanycukr/stream-sniper#readme"
Repository = "https://github.com/slanycukr/stream-sniper.git"
Issues = "https://github.com/slanycukr/stream-sniper/issues"

[tool.hatch.build.targets.wheel]
packages = ["stream_sniper"]

[tool.hatch.build.targets.sdist]
include = [
    "/stream_sniper",
    "/README.md",
    "/CLAUDE.md",
    "/uv.lock",
    "/docker-compose.yml",
    "/Dockerfile.api",
    "/Dockerfile.collector",
    "/.dockerignore",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = [
    "E501",   # line-length handled by formatter
    # Pervasive pre-existing style on a working codebase; not modernization-scope.
    # Annotation-style modernization would churn nearly every file.
    "B008",   # function-call-in-default-argument (FastAPI Depends/Query/Path pattern)
    "B904",   # raise-without-from-inside-except (pre-existing style across API error handlers)
]

[tool.ruff.lint.per-file-ignores]
# Test-authoring patterns that are intentional in the test suite:
#   B017/pytest.raises(Exception) broad-exception assertions,
#   E712 explicit == True/False against DB-returned values,
#   B007 unused loop index, B905 zip() without strict=,
#   SIM117 nested with (patch + pytest.raises) kept for readability,
#   F841 unused intermediate fixtures/vars in test setup.
"tests/**" = ["B017", "E712", "B007", "B905", "SIM117", "F841"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=stream_sniper --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["stream_sniper"]
branch = true
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 75
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
